Fixes to work on small devices properly!

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,14 +50,16 @@ img.imgCarousel{
 .section{
   display: flex;
   align-items: center;
+  justify-content:center;
   width: 100%;
   height: 100%;
+  min-height: 600px;
 }
 
 .main{
   width: 90%;
   height: 80%;
-  margin: auto;
+  min-height: 500px;
   background-color: #ffffff;
   border-top: solid;
   border-top-color: green;
@@ -77,13 +79,14 @@ img.imgCarousel{
 }
 
 .left{
-  position: relative;
+  display: block;
+  position:relative;
+  top: -3%;
   left: 3%;
   text-align: justify;
   width: 94%;
-  max-height: 90%;
+  max-height: 85%;
   font-size: 23px;
-  text-overflow: ellipsis;
   overflow-y: auto;
 }
 
@@ -93,7 +96,16 @@ img.imgCarousel{
   height: 150px;
   border-radius: 20px;
   box-shadow:4px 4px 4px #00000094;
-  margin-right:5%;
+  margin-right:10px;
+}
+
+.profile{
+  float: left;
+  width: 180px;
+  height: 180px;
+  border-radius: 20px;
+  box-shadow:4px 4px 4px #00000094;
+  margin-right:10px;
 }
 
 .list{
@@ -152,7 +164,7 @@ input[type=button], input[type=submit], input[type=reset] {
   left: 3%;
   text-align: justify;
   width: 94%;
-  max-height: 90%;
+  max-height: 85%;
   font-size: 23px;
   text-overflow: ellipsis;
   overflow-y: auto;
@@ -163,4 +175,8 @@ input[type=button], input[type=submit], input[type=reset] {
   height: 190px;
   overflow-y: auto;
   display: block;
+}
+
+form{
+  max-height: 85%;
 }
